Closed Bug 1752651 Opened 4 years ago Closed 4 years ago

Indeterminate checkboxes are printed as unchecked

Categories

(Core :: Print Preview, defect)

Firefox 96
defect

Tracking

()

VERIFIED FIXED
98 Branch
Tracking Status
firefox98 --- verified
firefox99 --- verified

People

(Reporter: github.com, Assigned: emilio)

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:96.0) Gecko/20100101 Firefox/96.0

Steps to reproduce:

  1. Go to https://developer.mozilla.org/en-US/docs/Web/HTML/Element/Input/checkbox#indeterminate_state_checkboxes
  2. Select the Sample "Complete the recipe"
  3. Strg+P
  4. In Print Preview check selection (if you do not, you won't see the sample in preview)

Actual results:

The indeterminate checkbox will rendered as unselected checkboxes

Expected results:

The indeterminate checkbox should show like the browser rendering

Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:98.0) Gecko/20100101 Firefox/98.0
20220129091708

This is a problem in both the print preview and the print output (tested with Microsoft Print to PDF printer).

Simpler testcase: just paste the following into the address bar.
data:text/html,<input type="checkbox" id="myCheck"><script>document.getElementById("myCheck").indeterminate = true;</script>

Status: UNCONFIRMED → NEW
Has STR: --- → yes
Component: Untriaged → Print Preview
Ever confirmed: true
Product: Firefox → Core
Summary: Indeterminate Checkboxes are not printed → Indeterminate checkboxes are printed as unchecked
Assignee: nobody → emilio
Flags: needinfo?(emilio)
Flags: needinfo?(emilio)

Matches other browsers and makes sense.

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/85c681cc96dc Clone indeterminateness of input elements. r=smaug
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/32618 for changes under testing/web-platform/tests
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 98 Branch
Upstream PR merged by moz-wptsync-bot

I was able to reproduce the issue on Win10 using build 98.0a1 (20220128190550).
Verified as fixed on Win10/Ubuntu20.4/ Mac10.13 using 98.0b2 and 99.0a1.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: