Bug 1752651 - Clone indeterminateness of input elements. r=smaug

Matches other browsers and makes sense.

Differential Revision: https://phabricator.services.mozilla.com/D137442